gen/trabParser.py
# Generated from C:/Users/jemanuel/Documents/ufpi/python-compiler2\trab.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class trabParser ( Parser ):

    grammarFileName = "trab.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'int'", "'float'", "'boolean'", 
                     "'string'", "','", "'='", "'void'", "'def'", "'('", 
                     "')'", "':'", "'}'", "'return'", "'main'", "'break'", 
                     "'else'", "'if'", "'for'", "'in'", "'range'", "'while'", 
                     "'print'", "'input'", "'-'", "'+'", "'not'", "'*'", 
                     "'/'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
                     "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOL", "ID", "INT", "STRING", 
                      "WS", "SL_COMMENT", "FLOAT" ]

    RULE_prog = 0
    RULE_listaDecVars = 1
    RULE_decVars = 2
    RULE_decParam = 3
    RULE_tipo = 4
    RULE_listaIds = 5
    RULE_atrib = 6
    RULE_listaAtribs = 7
    RULE_tipoFunc = 8
    RULE_decFuncoes = 9
    RULE_returnFunc = 10
    RULE_blocoMain = 11
    RULE_stmts = 12
    RULE_stmts_break = 13
    RULE_callFunction = 14
    RULE_cmdAtrib = 15
    RULE_elseIf = 16
    RULE_normalIf = 17
    RULE_cmdIf = 18
    RULE_cmdIf_break = 19
    RULE_cmdFor = 20
    RULE_cmdWhile = 21
    RULE_printExpr = 22
    RULE_printSec = 23
    RULE_printFunc = 24
    RULE_inputFunc = 25
    RULE_expr = 26

    ruleNames =  [ "prog", "listaDecVars", "decVars", "decParam", "tipo", 
                   "listaIds", "atrib", "listaAtribs", "tipoFunc", "decFuncoes", 
                   "returnFunc", "blocoMain", "stmts", "stmts_break", "callFunction", 
                   "cmdAtrib", "elseIf", "normalIf", "cmdIf", "cmdIf_break", 
                   "cmdFor", "cmdWhile", "printExpr", "printSec", "printFunc", 
                   "inputFunc", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    BOOL=38
    ID=39
    INT=40
    STRING=41
    WS=42
    SL_COMMENT=43
    FLOAT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blocoMain(self):
            return self.getTypedRuleContext(trabParser.BlocoMainContext,0)


        def decVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.DecVarsContext)
            else:
                return self.getTypedRuleContext(trabParser.DecVarsContext,i)


        def decFuncoes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.DecFuncoesContext)
            else:
                return self.getTypedRuleContext(trabParser.DecFuncoesContext,i)


        def getRuleIndex(self):
            return trabParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = trabParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabParser.T__1) | (1 << trabParser.T__2) | (1 << trabParser.T__3) | (1 << trabParser.T__4))) != 0):
                self.state = 54
                self.decVars()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==trabParser.T__8:
                self.state = 60
                self.decFuncoes()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.blocoMain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaDecVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def listaIds(self):
            return self.getTypedRuleContext(trabParser.ListaIdsContext,0)


        def listaAtribs(self):
            return self.getTypedRuleContext(trabParser.ListaAtribsContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_listaDecVars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaDecVars" ):
                listener.enterListaDecVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaDecVars" ):
                listener.exitListaDecVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaDecVars" ):
                return visitor.visitListaDecVars(self)
            else:
                return visitor.visitChildren(self)




    def listaDecVars(self):

        localctx = trabParser.ListaDecVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_listaDecVars)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.listaIds()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.listaAtribs()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def tipo(self):
            return self.getTypedRuleContext(trabParser.TipoContext,0)


        def listaDecVars(self):
            return self.getTypedRuleContext(trabParser.ListaDecVarsContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_decVars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVars" ):
                listener.enterDecVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVars" ):
                listener.exitDecVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecVars" ):
                return visitor.visitDecVars(self)
            else:
                return visitor.visitChildren(self)




    def decVars(self):

        localctx = trabParser.DecVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decVars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.tipo()

            self.state = 73
            self.listaDecVars()
            self.state = 74
            self.match(trabParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def tipo(self):
            return self.getTypedRuleContext(trabParser.TipoContext,0)


        def ID(self):
            return self.getToken(trabParser.ID, 0)

        def getRuleIndex(self):
            return trabParser.RULE_decParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecParam" ):
                listener.enterDecParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecParam" ):
                listener.exitDecParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecParam" ):
                return visitor.visitDecParam(self)
            else:
                return visitor.visitChildren(self)




    def decParam(self):

        localctx = trabParser.DecParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.tipo()

            self.state = 77
            self.match(trabParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None


        def getRuleIndex(self):
            return trabParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = trabParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabParser.T__1) | (1 << trabParser.T__2) | (1 << trabParser.T__3) | (1 << trabParser.T__4))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(trabParser.ID)
            else:
                return self.getToken(trabParser.ID, i)

        def getRuleIndex(self):
            return trabParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = trabParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listaIds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(trabParser.ID)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==trabParser.T__5:
                self.state = 82
                self.match(trabParser.T__5)
                self.state = 83
                self.match(trabParser.ID)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def ID(self):
            return self.getToken(trabParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(trabParser.ExprContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_atrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrib" ):
                listener.enterAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrib" ):
                listener.exitAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtrib" ):
                return visitor.visitAtrib(self)
            else:
                return visitor.visitChildren(self)




    def atrib(self):

        localctx = trabParser.AtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(trabParser.ID)
            self.state = 90
            self.match(trabParser.T__6)

            self.state = 91
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAtribsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def atrib(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.AtribContext)
            else:
                return self.getTypedRuleContext(trabParser.AtribContext,i)


        def getRuleIndex(self):
            return trabParser.RULE_listaAtribs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAtribs" ):
                listener.enterListaAtribs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAtribs" ):
                listener.exitListaAtribs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAtribs" ):
                return visitor.visitListaAtribs(self)
            else:
                return visitor.visitChildren(self)




    def listaAtribs(self):

        localctx = trabParser.ListaAtribsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listaAtribs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.atrib()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==trabParser.T__5:
                self.state = 94
                self.match(trabParser.T__5)
                self.state = 95
                self.atrib()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def tipo(self):
            return self.getTypedRuleContext(trabParser.TipoContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_tipoFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoFunc" ):
                listener.enterTipoFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoFunc" ):
                listener.exitTipoFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoFunc" ):
                return visitor.visitTipoFunc(self)
            else:
                return visitor.visitChildren(self)




    def tipoFunc(self):

        localctx = trabParser.TipoFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipoFunc)
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [trabParser.T__1, trabParser.T__2, trabParser.T__3, trabParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.tipo()
                pass
            elif token in [trabParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(trabParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None


        def getRuleIndex(self):
            return trabParser.RULE_decFuncoes

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value = ctx.value



    class DecFuncContext(DecFuncoesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabParser.DecFuncoesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipoFunc(self):
            return self.getTypedRuleContext(trabParser.TipoFuncContext,0)

        def ID(self):
            return self.getToken(trabParser.ID, 0)
        def decParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.DecParamContext)
            else:
                return self.getTypedRuleContext(trabParser.DecParamContext,i)

        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.StmtsContext)
            else:
                return self.getTypedRuleContext(trabParser.StmtsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFunc" ):
                listener.enterDecFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFunc" ):
                listener.exitDecFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecFunc" ):
                return visitor.visitDecFunc(self)
            else:
                return visitor.visitChildren(self)



    def decFuncoes(self):

        localctx = trabParser.DecFuncoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decFuncoes)
        self._la = 0 # Token type
        try:
            localctx = trabParser.DecFuncContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(trabParser.T__8)
            self.state = 106
            self.tipoFunc()
            self.state = 107
            self.match(trabParser.ID)
            self.state = 108
            self.match(trabParser.T__9)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabParser.T__1) | (1 << trabParser.T__2) | (1 << trabParser.T__3) | (1 << trabParser.T__4))) != 0):
                self.state = 109
                self.decParam()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==trabParser.T__5:
                    self.state = 110
                    self.match(trabParser.T__5)
                    self.state = 111
                    self.decParam()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 119
            self.match(trabParser.T__10)
            self.state = 120
            self.match(trabParser.T__11)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabParser.T__13) | (1 << trabParser.T__17) | (1 << trabParser.T__18) | (1 << trabParser.T__21) | (1 << trabParser.T__22) | (1 << trabParser.ID))) != 0):
                self.state = 121
                self.stmts()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(trabParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def expr(self):
            return self.getTypedRuleContext(trabParser.ExprContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_returnFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnFunc" ):
                listener.enterReturnFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnFunc" ):
                listener.exitReturnFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnFunc" ):
                return visitor.visitReturnFunc(self)
            else:
                return visitor.visitChildren(self)




    def returnFunc(self):

        localctx = trabParser.ReturnFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(trabParser.T__13)
            self.state = 130
            self.expr(0)
            self.state = 131
            self.match(trabParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoMainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabParser.StmtsContext)
            else:
                return self.getTypedRuleContext(trabParser.StmtsContext,i)


        def getRuleIndex(self):
            return trabParser.RULE_blocoMain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoMain" ):
                listener.enterBlocoMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoMain" ):
                listener.exitBlocoMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoMain" ):
                return visitor.visitBlocoMain(self)
            else:
                return visitor.visitChildren(self)




    def blocoMain(self):

        localctx = trabParser.BlocoMainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_blocoMain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(trabParser.T__14)
            self.state = 134
            self.match(trabParser.T__9)
            self.state = 135
            self.match(trabParser.T__10)
            self.state = 136
            self.match(trabParser.T__11)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << trabParser.T__13) | (1 << trabParser.T__17) | (1 << trabParser.T__18) | (1 << trabParser.T__21) | (1 << trabParser.T__22) | (1 << trabParser.ID))) != 0):
                self.state = 137
                self.stmts()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(trabParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def cmdAtrib(self):
            return self.getTypedRuleContext(trabParser.CmdAtribContext,0)


        def cmdIf(self):
            return self.getTypedRuleContext(trabParser.CmdIfContext,0)


        def cmdFor(self):
            return self.getTypedRuleContext(trabParser.CmdForContext,0)


        def cmdWhile(self):
            return self.getTypedRuleContext(trabParser.CmdWhileContext,0)


        def printFunc(self):
            return self.getTypedRuleContext(trabParser.PrintFuncContext,0)


        def inputFunc(self):
            return self.getTypedRuleContext(trabParser.InputFuncContext,0)


        def callFunction(self):
            return self.getTypedRuleContext(trabParser.CallFunctionContext,0)


        def returnFunc(self):
            return self.getTypedRuleContext(trabParser.ReturnFuncContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = trabParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmts)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.cmdAtrib()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.cmdIf()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.cmdFor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.cmdWhile()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.printFunc()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.inputFunc()
                self.state = 151
                self.match(trabParser.T__0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 153
                self.callFunction()
                self.state = 154
                self.match(trabParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 156
                self.returnFunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmts_breakContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def stmts(self):
            return self.getTypedRuleContext(trabParser.StmtsContext,0)


        def cmdIf_break(self):
            return self.getTypedRuleContext(trabParser.CmdIf_breakContext,0)


        def getRuleIndex(self):
            return trabParser.RULE_stmts_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts_break" ):
                listener.enterStmts_break(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts_break" ):
                listener.exitStmts_break(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts_break" ):
                return visitor.visitStmts_break(self)
            else:
                return visitor.visitChildren(self)




    def stmts_break(self):

        localctx = trabParser.Stmts_breakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmts_break)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.stmts()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.cmdIf_break()
                pass
